<resources>
    <string name="app_name">ASH mobile</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_pulsa">Pulsa</string>

    <string name="url">http://app.liveash.my.id/</string>
    <string name="judul1">Murah, Mudah &amp; Berkah</string>
    <string name="content1">Assalamualaikum</string>
    <string name="content">temen-temen perkenalkan ASH mobile agen pulsa yang akan membantu ekonomi kamu tanpa Riba dan ribet,
        jangan ragu kamu hanya Daftar langsung bisa jadi Agen.</string>
    <string name="judul2">Murah, Mudah &amp; Berkah</string>
    <string name="content2">10% Dari kontribusi anda kami berikan kepada kaum Duafa, Fakir Miskin, dan Anak Yatim.</string>
    <string name="judul3">Dukungan Anda</string>
    <string name="content31">Insyallah Berkah.</string>
    <string name="content3">Dengan meng-Install dan melakukan transaksi di Aplikasi ASH mobile, anda telah membantu perekonomian UMKM Indonesia,</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="menu_home" />
    <string name="history_fragment" />
    <string name="nb_pulsapromo">Perhatian : Pulsa promo terkadang lebih lambat, jika tidak masuk silahkan hubungi admin melalui menu bantuan. Terimakasih</string>
</resources>