<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#5E9861"
    tools:context=".fragment.FragmentTwo">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:layout_centerHorizontal="true"
        android:textSize="35sp"
        android:fontFamily="@font/msulimfont"
        android:layout_marginTop="30dp"/>


    <LinearLayout
        android:id="@+id/linearfragmentone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/title">

       <ImageView
           android:layout_width="320dp"
           android:layout_height="250dp"
           android:layout_gravity="center"
           android:scaleType="centerInside"
           android:background="@drawable/slide_two"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/judul2"
            android:textColor="@color/white"
            android:fontFamily="@font/proxy_bold"
            android:textSize="28sp"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/content2"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/proxy_light"
            android:textColor="@color/white"
            android:gravity="center"
            android:textSize="16sp"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="20dp"
            android:layout_gravity="center_horizontal"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center_horizontal"
        android:layout_marginBottom="50dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:layout_marginHorizontal="10dp"
            android:src="@drawable/white_circle_empty"/>
        <ImageView
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:layout_marginHorizontal="10dp"
            android:src="@drawable/white_circle"/>
        <ImageView
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:layout_marginHorizontal="10dp"
            android:src="@drawable/white_circle_empty"/>
    </LinearLayout>

</RelativeLayout>