<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#E91E63"
    tools:context=".fragment.FragmentThree">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:layout_centerHorizontal="true"
        android:textSize="35sp"
        android:fontFamily="@font/msulimfont"
        android:layout_marginTop="30dp"/>

    <LinearLayout
        android:id="@+id/linearfragmentone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/title">

        <ImageView
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_gravity="center"
            android:scaleType="centerInside"
            android:background="@drawable/slide_three"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/judul3"
            android:textColor="@color/white"
            android:fontFamily="@font/proxy_bold"
            android:textSize="28sp"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="16dp"
            android:fontFamily="@font/proxy_light"
            android:text="@string/content3"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="16sp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="16dp"
            android:fontFamily="@font/proxy_light"
            android:text="@string/content31"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center_horizontal"
        android:layout_marginBottom="50dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:layout_marginHorizontal="10dp"
            android:src="@drawable/white_circle_empty"/>
        <ImageView
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:layout_marginHorizontal="10dp"
            android:src="@drawable/white_circle_empty"/>
        <ImageView
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:layout_marginHorizontal="10dp"
            android:src="@drawable/white_circle"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:gravity="right"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="100dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnlogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:layout_marginRight="20dp"
            android:background="@drawable/bg_button"
            android:text="Login"
            />
        <Button
            android:id="@+id/btnsignup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:layout_marginRight="20dp"
            android:background="@drawable/bg_button"
            android:text="Sign Up"
            />
    </LinearLayout>


</RelativeLayout>